hphp/test/zend/bad/ext-posix/posix_setgid_basic.php
<?php


echo "*** Test by calling method or function with its expected arguments ***\n";

$gid = posix_getgid();
var_dump(posix_setgid( $gid ) );


?>
===DONE===